--- a/src/popup.html
+++ b/src/popup.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
-        <title>VidScribe</title>
+        <title>VidScript</title>
     </head>
     <body>
-        <h1>VidScribe</h1>
+        <h1>VidScript</h1>
         <button id="extract">Extract Text</button>
-        <script src="popup.js"></script>
+        <script type="module" src="popup.js"></script>
     </body>
 </html>
