--- a/src/popup.html
+++ b/src/popup.html
@@ -5,8 +5,30 @@
         <title>VidScript</title>
     </head>
     <body>
-        <h1>VidScript</h1>
-        <button id="extract">Extract Text</button>
+        <div id="vidscript-popup-header">
+            <h1 id="vidscript-popup-title">VidScript</h1>
+            <span id="vidscript-popup-header-results-count">0 results</span>
+        </div>
+        <div id="vidscript-popup-body">
+            <ul id="vidscript-popup-body-results">
+                <li class="vidscript-popup-body-results-item vidscript-popup-body-results-item-empty">No results found</li>
+            </ul>
+        </div>
+        <div id="vidscript-popup-body-actions">
+            <button id="vidscript-popup-body-clear-results">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 7h16m-10 4v6m4-6v6M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2l1-12M9 7V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3"
+                    />
+                </svg>
+                Clear Results
+            </button>
+        </div>
         <script type="module" src="popup.js"></script>
     </body>
 </html>
