FEAT :: Implemented the pop up update

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <div id="vidscript-popup-header">
-            <h1 id="vidscript-popup-title">VidScript</h1>
+            <img src="../icons/logo.png" alt="VidScript Logo" id="vidscript-popup-logo" />
+            <!-- <h1 id="vidscript-popup-title">VidScript</h1> -->
             <span id="vidscript-popup-header-results-count">0 results</span>
         </div>
         <div id="vidscript-popup-body">
