FEAT :: Add README file

--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,7 @@
         </div>
         <div id="vidscript-popup-body">
             <ul id="vidscript-popup-body-results">
-                <li class="vidscript-popup-body-results-item vidscript-popup-body-results-item-empty">No results found</li>
+                <li class="vidscript-popup-body-results-item vidscript-popup-body-results-item-empty">No saved results found for this video</li>
             </ul>
         </div>
         <div id="vidscript-popup-body-actions">
